--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
     margin: 0;
     background-color: #181818;
-    color: #e0e0e0;
+    color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     flex-direction: column;
@@ -16,6 +16,7 @@
     height: 100vh;
     padding-top: 20px;
     overflow-x: hidden; /* Ngăn cuộn ngang toàn trang */
+    overflow-y: hidden
 }
 
 .container {
@@ -30,13 +31,13 @@ header h1 {
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: 10px;
-    color: #ffffff;
+    color: #04aa6d;
 }
 
 header p {
     font-size: 1em;
     margin-bottom: 40px;
-    color: #b0b0b0;
+    color: #04aa6d;
 }
 
 .card-area {
@@ -159,7 +160,7 @@ header p {
     <div class="container">
         <header>
             <h1>CHỌN MỘT LÁ BÀI</h1>
-            <p>Tương lai nào đang chờ đợi bạn? Giờ là lúc khám phá những khả năng của ngày hôm nay!</p>
+            <p>Tương lai nào đang chờ đợi bạn? Đón nhận thông điệp Năm Mới từ Bé Sáng</p>
         </header>
         <div class="card-area">
             <!-- Các lá bài sẽ được tạo bởi JavaScript -->
