--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
     body {
     margin: 0;
-    background-color: #181818;
+    background-color: #ffffff;
     color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
@@ -186,9 +186,9 @@ header p {
       "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(4).png",
       "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(5).png",
       "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(6).png",
-    "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(7).png"
-        "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(8).png"
-        "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(9).png"
+    "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(7).png",
+        "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(8).png",
+        "https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/hzl-tarot%20(9).png",
     ];
   
     const cardStates = [];
