--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chọn một lá bài</title>
+    <link rel="icon" type="image/png" href="https://www.svgrepo.com/show/396243/crystal-ball.svg"> 
+    <title>Hazeline - Bộ bài Sángggg/title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lobster&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
       width: 30vh; /* chỉnh theo kích thước ảnh thật */
       height: 30vh;
       background-color: #18332b;
-      background-image: url('https://i.postimg.cc/DyCqKps2/corner-frame.png');
+      background-image: url('https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/40ff539a55321e050373e7c910885500a3d5e3de/asset%20img/line%20corner.svg');
       background-size: contain;
       background-repeat: no-repeat;
       background-blend-mode: screen;
@@ -44,10 +45,9 @@
       width: 30vh; /* hoặc tùy theo kích thước thật của ảnh */
       height: 30vh;
       background-color: #18332b;
-      background-image: url('https://i.postimg.cc/DyCqKps2/corner-frame.png');
+      background-image: url('https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/40ff539a55321e050373e7c910885500a3d5e3de/asset%20img/line%20corner.svg');
       background-size: contain;
-      background-repeat: no-repeat;
-      background-blend-mode: screen;
+      background-repeat: no-repeat;    
       transform: scaleX(-1); /* lật ảnh để đối xứng với top-left */
       pointer-events: none;
     }
@@ -58,10 +58,9 @@
       width: 30vh; /* hoặc tùy theo kích thước thật của ảnh */
       height: 30vh;
       background-color: #18332b;
-      background-image: url('https://i.postimg.cc/DyCqKps2/corner-frame.png');
+      background-image: url('https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/40ff539a55321e050373e7c910885500a3d5e3de/asset%20img/line%20corner.svg');
       background-size: contain;
-      background-repeat: no-repeat;
-      background-blend-mode: screen;
+      background-repeat: no-repeat;    
       transform: scaleY(-1); /* lật ảnh để đối xứng với top-left */
       pointer-events: none;
       
@@ -74,10 +73,9 @@
       width: 30vh; /* hoặc tùy theo kích thước thật của ảnh */
       height: 30vh;
       background-color: #18332b;
-      background-image: url('https://i.postimg.cc/DyCqKps2/corner-frame.png');
+      background-image: url('https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/40ff539a55321e050373e7c910885500a3d5e3de/asset%20img/line%20corner.svg');
       background-size: contain;
       background-repeat: no-repeat;
-      background-blend-mode: screen;
       transform: scaleX(-1) scaleY(-1);/* lật ảnh để đối xứng với top-left */
       pointer-events: none;
       
