--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
         font-family: "Lobster", sans-serif;
         font-weight: 400;
         margin-bottom: 10px;
-        color: #e7edad;
+        color: #FFF685;
         
     }
 
     header p {
         font-size: 1.25em;
         margin-bottom: 40px;
-        color: #e7edad;
+        color: #FFF685;
     }
 
     .card-area {
@@ -200,11 +200,8 @@
     }
 
     @media (max-width: 768px) {
-        header h1 {
-            font-size: 24px;
-        }
         header p {
-            font-size: 16px;
+            font-size: 0.9em;
             margin-bottom: 20px;
         }
         .card-area {
