--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="https://www.svgrepo.com/show/396243/crystal-ball.svg"> 
+    <link rel="icon" type="image/png" href="https://www.svgrepo.com/show/396243/crystal-ball.svg">
+    <!-- Primary Meta Tags -->
+<title>Hazeline - Bộ bài Sáng Như Ý</title>
+<meta name="title" content="Hazeline - Bộ bài Sáng Như Ý" />
+<meta name="description" content="Da sánggg như ý, đIều gì sẽ sáng như da? Sưu tập bộ thẻ bàI “Sáng Như Ý” để nhận thông đIệp!" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://hazeline.netlify.app/" />
+<meta property="og:title" content="Hazeline - Bộ bài Sáng Như Ý" />
+<meta property="og:description" content="Da sánggg như ý, đIều gì sẽ sáng như da? Sưu tập bộ thẻ bàI “Sáng Như Ý” để nhận thông đIệp!" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://hazeline.netlify.app/" />
+<meta property="twitter:title" content="Hazeline - Bộ bài Sáng Như Ý" />
+<meta property="twitter:description" content="Da sánggg như ý, đIều gì sẽ sáng như da? Sưu tập bộ thẻ bàI “Sáng Như Ý” để nhận thông đIệp!" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
     <title>Hazeline - Bộ bài Sángggg</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
