--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <meta property="og:url" content="https://hazeline.netlify.app/" />
 <meta property="og:title" content="Hazeline - Bộ bài Sáng Như Ý" />
 <meta property="og:description" content="Da sánggg như ý, đIều gì sẽ sáng như da? Sưu tập bộ thẻ bàI “Sáng Như Ý” để nhận thông đIệp!" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/thumbnail%20hzl.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://hazeline.netlify.app/" />
 <meta property="twitter:title" content="Hazeline - Bộ bài Sáng Như Ý" />
 <meta property="twitter:description" content="Da sánggg như ý, đIều gì sẽ sáng như da? Sưu tập bộ thẻ bàI “Sáng Như Ý” để nhận thông đIệp!" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="https://raw.githubusercontent.com/harmony3k/hazeline-sang-nhu-y/refs/heads/main/asset%20img/thumbnail%20hzl.jpg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
     <title>Hazeline - Bộ bài Sángggg</title>
